--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
         <h1 title="Cálculo de la capacidad de carga de muros de mampostería reforzada con columnas de confinamiento.">
             Hoja de Cálculo - Resistencia a Compresión de Mampostería Confinada</h1>
         <p class="author">Autor del script original: PABLO BAEZ</p>
-        <p class="adaptation">(Adaptado para Web usando FastAPI - python)</p>
+        <p>(Adaptado para Web usando FastAPI - python)</p>
 
         {% if error %}
         <p class="error">{{ error }}</p>
